# codeql-extractor-action

./: .dockerignore  .gitignore  .release.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.Dockerfile  action.yml  entrypoint.sh
.github/: CODEOWNERS  dependabot.yml
.github/instructions/: project.instructions.md
.github/workflows/: build.yml  release.yml  self-action.yml
container/: Dockerfile  action.Dockerfile
src/: action.rs  codeql.rs  extractors.rs  main.rs
