[package]
name = "codeql-extractor-action"
description = "GitHub Action for CodeQL Extractors"
version = "0.1.0"

license = "MIT"

edition = "2024"
rust-version = "1.85"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
# Actions
ghactions = { version = "^0.15", features = ["dotenvy", "log", "generate", "octocrab", "toolcache"] }
ghactions-core = { version = "^0.15" }
# ghastoolkit = "^0.7.1"
ghastoolkit = { version = "^0.7.1", path = "../ghastoolkit-rs/core" }

# GitHub API
octocrab = "^0.44"
openssl = { version = "0.10", features = ["vendored"] }

