[package]
name = "codeql-extractor-action"
description = "GitHub Action for CodeQL Extractors"
version = "0.0.10"
authors = ["GeekMasher"]

license = "MIT"

edition = "2024"
rust-version = "1.85"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
glob = "0.3"
# Actions
ghactions = { version = "^0.16", features = ["dotenvy", "log", "generate", "octocrab", "toolcache-all"] }
ghactions-core = { version = "^0.16" }

ghastoolkit = { version = "^0.11", features = ["toolcache"] }

# GitHub API
octocrab = "^0.44"
openssl = { version = "0.10", features = ["vendored"] }
