[package]
name = "codeql-extractor-action"
description = "GitHub Action for CodeQL Extractors"
version = "0.1.1"
authors = ["GeekMasher"]

license = "MIT"

edition = "2024"
rust-version = "1.89"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dotenvy = "0.15"
glob = "0.3"
# Actions
ghactions = { version = "^0.16.5", features = ["dotenvy", "log", "generate", "octocrab", "toolcache-all"] }
ghactions-core = { version = "^0.16.5" }

ghastoolkit = { version = "^0.11", features = ["toolcache"] }

# GitHub API
octocrab = "^0.44"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0"
